[project]
name = "manim-databases"
version = "0.1.0"
description = "A Manim plugin to animate database concepts: tables, B-trees, query plans, WAL, replication, locks."
authors = [{name = "Breno Alberto", email = "brenoaps435@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["manim", "animation", "database", "postgresql", "education", "btree", "query-plan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Education",
]
dependencies = [
    "manim>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/pg-pilot/manim-databases"
Repository = "https://github.com/pg-pilot/manim-databases"
Documentation = "https://manim-databases.readthedocs.io/"
Issues = "https://github.com/pg-pilot/manim-databases/issues"

[project.entry-points."manim.plugins"]
manim_databases = "manim_databases"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=6.0.1",
    "ruff>=0.11.5",
    "pytest>=8.0.0",
    "sphinx>=7.4.7",
    "furo>=2024.8.6",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
extend-exclude = [
    ".github",
    "media",
]
fix = true

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "PT",
    "SIM",
    "UP",
]

ignore = [
    "A001",
    "B006",
    "B008",
    "F403",
    "F405",
    "PT011",
    "E111",
    "E114",
    "E117",
    "E501",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B018",
    "F841",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manim_databases"]
